; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_ageq.c_ieee80211_ageq_mfree.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_ageq.c_ieee80211_ageq_mfree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { %struct.mbuf* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ieee80211_ageq_mfree(%struct.mbuf* %0) #0 {
  %2 = alloca %struct.mbuf*, align 8
  %3 = alloca %struct.mbuf*, align 8
  store %struct.mbuf* %0, %struct.mbuf** %2, align 8
  br label %4

4:                                                ; preds = %13, %1
  %5 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %6 = icmp ne %struct.mbuf* %5, null
  br i1 %6, label %7, label %15

7:                                                ; preds = %4
  %8 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %9 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %8, i32 0, i32 0
  %10 = load %struct.mbuf*, %struct.mbuf** %9, align 8
  store %struct.mbuf* %10, %struct.mbuf** %3, align 8
  %11 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %12 = call i32 @ageq_mfree(%struct.mbuf* %11)
  br label %13

13:                                               ; preds = %7
  %14 = load %struct.mbuf*, %struct.mbuf** %3, align 8
  store %struct.mbuf* %14, %struct.mbuf** %2, align 8
  br label %4

15:                                               ; preds = %4
  ret void
}

declare dso_local i32 @ageq_mfree(%struct.mbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
